--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^3.11.2"
+  },
+  "scripts": {
+    "start": "bin/webpack-dev-server --hot --mode development",
+    "build": "bin/webpack --mode=production"
   }
 }
