--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -54,8 +54,11 @@ development:
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
     https: false
-    host: localhost
-    port: 3035
+    # ===Default config===
+    # host: localhost
+    # port: 3035
+    # public: localhost:3035
+    host: webpacker
     public: localhost:3035
     hmr: false
     # Inline should be set to true if using HMR
